fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-
-    @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&family=Poppins:wght@200;400&display=swap');
-
-
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-
-
     overflow-x: hidden;
 }
 
-.page1 {
+.mainPage {
     height: 100vh;
 
     display: flex;
@@ -22,7 +16,7 @@
 /* PAGE TOP*/
 header {
 
-    height: 2rem;
+    height: 3rem;
     background-color: rgb(255, 173, 220);
 
 
@@ -44,7 +38,7 @@ header {
     color: white;
 
 
-    font-size: 10px;
+    font-size: 12px;
 
     display: flex;
     align-items: center;
@@ -65,14 +59,14 @@ header {
 
 
 
-.innerHeader1 {
+.innerHeaderLeft {
     /* width: 100%; */
 
     margin-left: 50px;
 
 }
 
-.innerHeader2 {
+.innerHeaderRight {
     /* width: 100%; */
     margin-right: 50px;
     /* display: none; */
@@ -262,7 +256,7 @@ header li:hover {
 
 }
 
-.innerTikTokMenu {
+.tikTokMenu {
     height: 100%;
 
     white-space: nowrap;
@@ -277,7 +271,7 @@ header li:hover {
 
 }
 
-.innerTikTokMenu div {
+.tikTokMenu div {
     min-width: 60px;
     list-style: none;
 
@@ -288,7 +282,7 @@ header li:hover {
 
 }
 
-.innerTikTokMenu div:hover {
+.tikTokMenu div:hover {
     transform: scale(1.2);
 }
 
@@ -390,7 +384,7 @@ header li:hover {
     transform: translateX(-1rem);
 }
 
-.menuicons {
+.menuIcons {
     height: 22px;
     margin-bottom: 4px;
 }
@@ -415,11 +409,12 @@ header li:hover {
 
 }
 
-.aqui {
+.secondPageTitle {
+    display: flex;
     margin-left: 1rem;
 }
 
-.aqui p {
+.secondPageTitle p {
     font-weight: 600;
     font-size: 24px;
     color: rgb(86, 86, 86);
@@ -449,12 +444,12 @@ header li:hover {
 /* PAGE 2*/
 
 
-.page2 {
+.secondPageWrapper {
     height: 100vh;
     background-color: rgb(248, 234, 233);
 }
 
-.innerPage2 {
+.secondPage {
 
     height: 100%;
 
@@ -481,6 +476,8 @@ header li:hover {
 
 
 
+
+
 }
 
 .imageGrid div {
@@ -488,6 +485,7 @@ header li:hover {
     color: white;
 
     font-size: 20px;
+    overflow-y: hidden;
 }
 
 .imageGrid p {
@@ -535,16 +533,7 @@ header li:hover {
     font-weight: 400;
 }
 
-
-/* .innerInner p{
-    
-} */
-
-.aqui {
-    display: flex;
-}
-
-.esse {
+.titleDecoration {
 
     text-decoration: underline;
     text-decoration-color: pink;
@@ -581,13 +570,18 @@ header li:hover {
         justify-content: center;
     }
 
-    .innerHeader2 {
+    .innerHeaderRight {
         display: none;
     }
 
-    .innerHeader1 {
+    .innerHeaderLeft {
 
         margin-left: 0;
+    }
+
+    header{
+        font-size: 10px;
+        height: 2rem;
     }
 
 
@@ -595,6 +589,7 @@ header li:hover {
         font-size: 32px;
         font-weight: 400;
         line-height: 40px;
+        overflow-y: hidden;
     }
 
     .title h3 {
@@ -605,6 +600,7 @@ header li:hover {
         padding-left: 1rem;
         background-image: url(Images/homepictureMobile.jpg);
         height: 19rem;
+
 
     }
 
@@ -620,7 +616,7 @@ header li:hover {
     }
 
 
-    .page1 nav {
+    .mainPage nav {
 
 
         height: 4rem;
@@ -633,6 +629,7 @@ header li:hover {
 
     .title {
         max-width: 200px;
+
     }
 
     .title button {
@@ -670,7 +667,7 @@ header li:hover {
         font-size: 12px;
     }
 
-    .menuicons {
+    .menuIcons {
         height: 24px;
 
 
@@ -680,23 +677,26 @@ header li:hover {
         padding: 0px;
     }
 
-    .page1 {
+    .mainPage {
         height: fit-content;
     }
 
-    .page2 {
+    .secondPageWrapper {
         height: fit-content;
     }
 
-    .innerPage2 {
+    .secondPage {
         display: block;
     }
 
-    .aqui p {
-        font-size: 18px;
+    .secondPageTitle {
         padding-top: 1rem;
         font-weight: 500;
         text-transform: uppercase;
+    }
+
+    .secondPageTitle p{
+        font-size: 18px;
     }
 
     .leftArrowIcon,
@@ -711,14 +711,14 @@ header li:hover {
 
     }
 
-    .innerTikTokMenu {
+    .tikTokMenu {
         margin-right: 0;
         margin-left: 1rem;
 
 
     }
 
-    .innerTikTokMenu p {
+    .tikTokMenu p {
         font-size: 10px;
     }
 }
